@@ -32,6 +32,8 @@ HLStats ChangeLog
 *) New: Russian translation by E][tremist
 *) Update: TFC images
 *) Update: TFC gamesupport
+*) Update: TF2 gamesupport
+*) Update: L4D gamesupport
 *) Changed: Options moved from conf files into DB, but information
 			about DB access is still in those files. Needed to make sure
 			the daemon and webinterface can still be apart.
